# HW_20.2

./: .gitignore  groups.json  pyproject.toml
blog/: models.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_options_alter_blog_content_and_more.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_product_is_active_subject.py  0003_remove_product_manufactured_at.py  0004_version_delete_subject.py  0005_alter_version_options_remove_product_is_active_and_more.py  0006_product_owner.py  0007_alter_product_options_product_published.py
catalog/templates/main/: base.html  category_list.html  contacts.html  home.html  product.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  product_update.html
catalog/templates/main/includes/: inc_main_menu.html
catalog/templatetags/: media_url.py
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html  recovery_form.html
users/templates/users/: user_form.html
