[tool.poetry]
name = "hw-19-2"
version = "0.1.0"
description = ""
authors = ["camper"]
readme = "README.md"
packages = [{include = "hw_19"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.9"
ipython = "^8.23.0"
django = "4.2"
traitlets = "^5.14.3"
redis = "^5.0.4"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
